# cookiecutter-openff

./: .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  cookiecutter.json
.github/actions/run-cookie-ci/: action.yaml
.github/workflows/: gh-ci.yaml
docs/source/: conf.py
hooks/: post_gen_project.py  pre_gen_project.py
projectname/.github/workflows/: gh-ci.yaml
tests/: test_output.py  utils.py
{{cookiecutter.repo_name}}/: .codecov.yml  .gitattributes  .gitignore  .lgtm.yml  README.md  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py
{{cookiecutter.repo_name}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.repo_name}}/.github/workflows/: {{cookiecutter._ci_name}}.yaml
{{cookiecutter.repo_name}}/devtools/conda-envs/: docs_env.yaml  test_env.yaml
{{cookiecutter.repo_name}}/docs/: Makefile  README.md  conf.py  index.md
{{cookiecutter.repo_name}}/docs/_templates/autosummary/: base.rst  class.rst  module.rst
{{cookiecutter.repo_name}}/docs/source/: conf.py
{{cookiecutter.repo_name}}/openff/{{cookiecutter.module_name}}/: __init__.py
{{cookiecutter.repo_name}}/openff/{{cookiecutter.module_name}}/_tests/: conftest.py  test_{{cookiecutter.module_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py  {{cookiecutter.package_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/tests/: conftest.py  test_{{cookiecutter.package_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/tests/data/: files.py
